# Culinary-Canvas

./: answer.txt  bot.py  pyproject.toml
core/: jazzmin_conf.py  logging_settings.py  settings.py  urls.py
locale/en/LC_MESSAGES/: django.po
locale/rn/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
recipes/: admin.py  apps.py  models.py  serializers.py  signals.py  translation.py  urls.py  views.py
recipes/management/commands/: publish_old_drafts.py
recipes/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comment_options_alter_rating_options_and_more.py  0004_recipe_ingredients_en_recipe_ingredients_ru_and_more.py
templates/recipes/: recipe_form.html.txt
users/: admin.py  apps.py  manager.py  models.py  serializers.py  signals.py  tasks.py  translations.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_date_joined_and_more.py
